--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <!-- external css -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="box"></div>
+  </body>
 </html>
